--- a/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
@@ -251,7 +251,7 @@
                     PaddingLeft: =7.67
                     PaddingRight: =4.63
                     PaddingTop: =4.63
-                    Size: =18.46
+                    Size: = Min('Asset Dashboard'.Width / 40,18)
                     Text: ="Filter"
                     Width: =Parent.Width
                     X: =0.00
@@ -388,7 +388,7 @@
                         PaddingLeft: =7.67
                         PaddingRight: =4.63
                         PaddingTop: =4.63
-                        Size: =18.46
+                        Size: = Min('Asset Dashboard'.Width / 40,18)
                         Text: =TicketPriortyCateSelector.Selected.Name& " Tickets"
                         Width: |-
                             =Parent.Width - 
