--- a/CCFS Tickets/Src/Ticket Information.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information.fx.yaml
@@ -203,7 +203,7 @@
                     PaddingLeft: =7.67
                     PaddingRight: =4.63
                     PaddingTop: =4.63
-                    Size: =16
+                    Size: = Min('Asset Dashboard'.Width / 40,18)
                     Text: |-
                         =If(
                             TicketDataEditForm.Mode = 1,
@@ -3211,7 +3211,7 @@
                     PaddingLeft: =7.67
                     PaddingRight: =4.63
                     PaddingTop: =4.63
-                    Size: =16
+                    Size: = Min('Asset Dashboard'.Width / 40,18)
                     Text: ="Messages"
                     Width: =Parent.Width
                     X: =0.00
@@ -3476,7 +3476,7 @@
                 PaddingLeft: =7.67
                 PaddingRight: =4.63
                 PaddingTop: =4.63
-                Size: =16
+                Size: = Min('Asset Dashboard'.Width / 40,18)
                 Text: ="Attachments"
                 Width: =Parent.Width
                 X: =0.00
@@ -3643,7 +3643,7 @@
                 PaddingLeft: =7.67
                 PaddingRight: =4.63
                 PaddingTop: =4.63
-                Size: =18.46
+                Size: = Min('Asset Dashboard'.Width / 40,18)
                 Text: ="Service Request"
                 Width: =Parent.Width
                 X: =0.00
